Refs #62045 fix search facets not showing on logged in

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -390,6 +390,11 @@ header {
       margin-bottom: -0.25rem;
       width: auto;
     }
+
+    .contextual {
+      right: auto;
+      left: 2rem;
+    }
   }
 
   .search-menu-icon {
