--- a/sass/drupal/pages/_search.scss
+++ b/sass/drupal/pages/_search.scss
@@ -242,6 +242,9 @@
       align-items: center;
       color: $grey4;
       font-weight: 600;
+      background-color: transparent;
+      border: none;
+      
       &:hover {
         text-decoration: none;
       }
